# meal-planner

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .pylintrc  AGENTS.md  Dockerfile  README.md  discussion.md  docker-bake.hcl  l1_prompt-planning-session.md  l1_prompt-planning-summary.md  package.json  pyproject.toml  run.py  run_tests.sh  start_and_seed.sh  tailwind.config.js
.ai/: feature_summary.md  implementation_summary.md  migration_plan.md  next_step.md  requirements.md  stack.md  test_plan.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  integration-tests.yml
docs/: legacy_przepisy_schema.md
docs/superpowers/plans/: 2026-06-28-shopping-list-grouping-canonical-refactor.md
frontend/: eslint.config.js  node_modules  package-lock.json  package.json  playwright.config.js  vite.config.js
frontend/e2e/: main.spec.js
frontend/src/: App.jsx  main.jsx
frontend/src/components/: Layout.jsx  MealPlanDetail.jsx  (+7 more)
instance/: meal_planner.db
meal_planner_app/: README.md  __init__.py  crud.py  database.py  init_db.py  main.py  migrate_legacy.py  seed_db.py  services.py
meal_planner_app.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
meal_planner_app/models/: ingredient.py  meal_plan.py  recipe.py  shopping_list.py
meal_planner_app/templates/: base.html  meal_plan_detail.html  meal_plan_form.html  meal_plan_list.html  recipe_detail.html  recipe_form.html  recipe_list.html  shopping_list_detail.html
meal_planner_app/tests/: base.py  test_api.py  test_crud.py  test_shopping_list.py  test_shopping_list_api.py
