[project]
name = "meal_planner_app"
version = "0.1.0"
description = "A simple meal planner application"
dependencies = [
    "Flask",
    "fpdf2",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "black",
    "pre-commit",
    "gunicorn",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
meal_planner_app = ["templates/**/*", "static/**/*"]

